[gd_scene load_steps=12 format=3 uid="uid://dw1xhin6im8kv"]

[ext_resource type="Script" path="res://scenes/hud.gd" id="1_ocri0"]
[ext_resource type="LabelSettings" uid="uid://bj4owgofe5ayt" path="res://resources/textstyle.tres" id="2_8bg75"]
[ext_resource type="LabelSettings" uid="uid://cnoygoxh0kgme" path="res://resources/small_textstyle.tres" id="3_6pdgi"]
[ext_resource type="PackedScene" uid="uid://dmr0fcamx7t56" path="res://addons/joystick/virtual_joystick.tscn" id="5_vxcta"]
[ext_resource type="Texture2D" uid="uid://0jhdq4bj5wh3" path="res://art-and-sound/kenney_space-shooter-redux/PNG/Meteors/meteorBrown_small1.png" id="6_m0fvi"]
[ext_resource type="Texture2D" uid="uid://b7fpmcg7ian2w" path="res://art-and-sound/missile/spr_missile.png" id="6_o465q"]

[sub_resource type="Animation" id="Animation_c728u"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%PressAnyKeyLabel:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:tint_progress")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0.6, 0.6, 1)]
}

[sub_resource type="Animation" id="Animation_0he1m"]
resource_name = "fullBar"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:tint_progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 0.6, 0.6, 1), Color(1, 0, 0, 1), Color(1, 0.6, 0.6, 1), Color(1, 0, 0, 1), Color(1, 0.682353, 0.384314, 1)]
}

[sub_resource type="Animation" id="Animation_ye65v"]
resource_name = "showText"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%PressAnyKeyLabel:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kulbx"]
_data = {
"RESET": SubResource("Animation_c728u"),
"fullBar": SubResource("Animation_0he1m"),
"showText": SubResource("Animation_ye65v")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7yggq"]
size = Vector2(30, 30)

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_ocri0")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="DeathLabel" type="Label" parent="Control"]
unique_name_in_owner = true
visible = false
offset_left = 1.0
offset_top = 204.0
offset_right = 647.0
offset_bottom = 408.0
text = "GAME_OBJECTIVE_GAMEOVER"
label_settings = ExtResource("2_8bg75")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="HighscoreLabel" type="Label" parent="Control"]
unique_name_in_owner = true
visible = false
offset_left = 18.0
offset_top = 568.0
offset_right = 633.0
offset_bottom = 924.0
label_settings = ExtResource("2_8bg75")
horizontal_alignment = 1

[node name="LowestScoreLabel" type="Label" parent="Control"]
unique_name_in_owner = true
visible = false
offset_left = 15.0
offset_top = 797.0
offset_right = 634.0
offset_bottom = 934.0
label_settings = ExtResource("2_8bg75")
horizontal_alignment = 1

[node name="PressAnyKeyLabel" type="Label" parent="Control"]
unique_name_in_owner = true
offset_left = 18.0
offset_top = 768.0
offset_right = 633.0
offset_bottom = 915.0
theme_override_font_sizes/font_size = 20
text = "MENU_LABEL_PRESS_ANYKEY_CONTINUE"
label_settings = ExtResource("3_6pdgi")
horizontal_alignment = 1
autowrap_mode = 3
visible_characters = 0
visible_ratio = 0.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/PressAnyKeyLabel"]
libraries = {
"": SubResource("AnimationLibrary_kulbx")
}

[node name="Virtual Joystick" parent="Control" instance=ExtResource("5_vxcta")]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.52549)
layout_mode = 1
offset_top = -259.0
offset_right = 262.0
pressed_color = Color(0.745098, 0.745098, 0.745098, 0.360784)
joystick_mode = 1
visibility_mode = 1
action_left = "left"
action_right = "right"
action_up = "up"
action_down = "down"

[node name="FireButton" type="TouchScreenButton" parent="Control"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.52549)
texture_filter = 1
position = Vector2(500, 989)
scale = Vector2(4.515, 4.20588)
texture_normal = ExtResource("6_m0fvi")
shape = SubResource("RectangleShape2D_7yggq")
action = "fire"
visibility_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Control" type="Control" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="LivesLabel" type="Label" parent="Control/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "GAME_CHARACTER_LIVES"
label_settings = ExtResource("3_6pdgi")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BulletsBar" type="TextureProgressBar" parent="Control/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 5.0
fill_mode = 1
texture_progress = ExtResource("6_o465q")
texture_progress_offset = Vector2(5, 10)
tint_under = Color(1, 1, 1, 0.270588)
tint_progress = Color(1, 0.6, 0.6, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/VBoxContainer/HBoxContainer/BulletsBar"]
libraries = {
"": SubResource("AnimationLibrary_kulbx")
}

[node name="BulletsBar" type="TextureProgressBar" parent="Control/VBoxContainer/HBoxContainer/BulletsBar"]
size_flags_horizontal = 3
max_value = 5.0
fill_mode = 1
texture_progress = ExtResource("6_o465q")
texture_progress_offset = Vector2(5, 10)
tint_under = Color(1, 1, 1, 0.270588)
tint_progress = Color(1, 0.6, 0.6, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/VBoxContainer/HBoxContainer/BulletsBar/BulletsBar"]
libraries = {
"": SubResource("AnimationLibrary_kulbx")
}

[node name="ScoreLabel" type="Label" parent="Control/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
text = "0"
label_settings = ExtResource("2_8bg75")
horizontal_alignment = 2
vertical_alignment = 2
